# calewood-movie-preview

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
docker/: entrypoint.py
docs/: source_api_mapping.md
src/calewood_movie_preview/: calewood_api.py  config.py  imgbb.py  logging.py  main.py  media.py  models.py  qbittorrent.py  tasks.py  utils.py  workflow.py
tests/: test_capture_timestamps.py  test_comment_parsing.py  test_video_selection.py  test_workflow.py
